@@ -1,3 +1,12 @@
+2012-12-14  Ineiev  <ineiev@gmail.com>  (tiny change)
+
+	* configure.ac (HAVE_TERMLIBS): new conditional.  End with
+	repeated warning about no terminal library for visibility.
+	* Makefile.am (SUBDIRS) [HAVE_TERMLIBS]: only include info/ if
+	new conditional is true.
+	* man/Makefile.am (man_MANS) [HAVE_TERMLIBS]: likewise for making
+	info.1 and infokey.1.
+
 2012-12-14  Thien-Thi Nguyen  <ttn@gnuvola.org>  (tiny change)
 
 	* doc/texinfo.txi (Three Arguments):
